# data-science

./: .gitignore  README.md  TME1-webscrapping-etu.ipynb  pyproject.toml
notebooks/: TME1.ipynb  TME2.ipynb  TME5.ipynb  TME7.ipynb  TME8.ipynb  TME9.ipynb
notebooks/TME3/: TME3.ipynb  mystery_data.npy
notebooks/TME4/: TME4.ipynb
notebooks/TME6/: TME6-ANOVA.ipynb  TME6-Bias.ipynb  regard.py
notes/: TME1.md  TME2.md  TME3.md  TME4.md  TME5.md  TME6.md  TME7.md  TME8.md  TME9.md  projects.md
